fix text align style

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -374,8 +374,6 @@ div {
         line-height: 1.77;
         color: #444;
         padding-top: 15px;
-        text-align: justify;
-        text-justify: distribute;
         word-break: break-word;
 
         h2 {
